syntax = "proto3";

package api.product;

import "google/api/annotations.proto";
// import "../errors/errors.proto";

option go_package = "go-products/api/product;product";
option java_multiple_files = true;
option java_package = "api.products";

service Products {
	rpc CreateProducts (CreateProductsRequest) returns (CreateProductsReply) {
		option (google.api.http) = {
			post: "/products",
			body: "*"
		};
	};
	rpc UpdateProducts (UpdateProductsRequest) returns (UpdateProductsReply) {
		option (google.api.http) = {
			put: "/products",
			body: "*"
		};
	};
	rpc DeleteProducts (DeleteProductsRequest) returns (DeleteProductsReply) {
		option (google.api.http) = {
			delete: "/products/{sku}",
		};
	};
	rpc ListProducts (ListProductsRequest) returns (ListProductsReply) {
		option (google.api.http) = {
			get: "/products",
		};
	};
	rpc GetProduct (GetProductRequest) returns (GetProductReply) {
		option (google.api.http) = {
			get: "/products/{id}",
			additional_bindings {
				get: "/products/sku/{sku}"
			},
		};
	};
}

message Error {
    string code     = 1 [json_name="code"];
    string reason   = 2 [json_name="reason"]; 
}

message CommonResponse {
	bool success 		= 1 [json_name="success"];
	string message		= 2 [json_name="message"];
	Error error			= 3 [json_name="error"];
}

message Product {
	int64 ID 		= 1 [json_name="id"];
	string SKU 		= 2 [json_name="sku"];
	string Name 	= 3 [json_name="name"];
	int32 Quantity 	= 4 [json_name="quantity"];
	int64 Price 	= 5 [json_name="price"];
}

message CreateProductsRequest {
	repeated Product products = 1;
}
message CreateProductsReply {
	CommonResponse meta = 1;
}

message UpdateProductsRequest {
	Product product = 1;
}
message UpdateProductsReply {
	CommonResponse meta = 1;
}

message DeleteProductsRequest {
	string sku = 1;
}
message DeleteProductsReply {
	CommonResponse meta = 1;
}

message GetProductRequest {
	int64 id 	= 1 [json_name="id"];
	string sku 	= 2 [json_name="sku"];
}
message GetProductReply {
	Product product		= 1 [json_name="product"];
	CommonResponse meta = 2 [json_name="meta"];
}

message ListProductsRequest {
	int32 page 		= 1 [json_name="page"];
	int32 pageSize 	= 2 [json_name="page_size"];
}
message ListProductsReply {
	repeated Product products 	= 1 [json_name="products"];
	CommonResponse meta 		= 2 [json_name="meta"];
}